--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Hello! Who are you?</h1>
 
-<%= form_with do |form| %>
+<%= form_with url: users_path, method: :post do |form| %>
   <%= form.label :name, "Name:" %>
   <%= form.text_field :name %>
   <%= form.submit "Continue" %>
