Save the new user, add form validations
I tend to prefer rescueing the active record exception as it divides
the happy and unhappy flow in the controller. But if you used something
like `if @user.save` `else` it's also fine.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,10 @@
 <h1>Hello! Who are you?</h1>
 
-<%= form_for User do |form| %>
+<%= form_with model: @user do |form| %>
   <%= form.label :name, "Name:" %>
   <%= form.text_field :name %>
+
+  <p><%= @user.errors.full_messages.join(", ") %></p>
+
   <%= form.submit "Continue" %>
 <% end %>
